# ilj

./: .gitignore  .gitmodules  .yarnrc.yml  CHANGELOG.md  LICENSE  README.md  package.json  tsconfig.base.json  tsconfig.json  tsconfig.project.json  tsconfig.solution.json
.github/workflows/: build.yml  check.yml
apps/binpack-demo/: index.html  package.json  rollup.config.js  tsconfig.json  tsconfig.project.json
apps/binpack-demo/src/: index.ts
apps/frame-benchmark/: index.html  package.json  tsconfig.json  tsconfig.project.json
apps/frame-benchmark/src/: index.ts
apps/test-app/: .gitignore  app-config.json  package.json  tsconfig.json  tsconfig.project.json
apps/test-xfl/: app-config.json  tsconfig.json  tsconfig.project.json
capacitor/: README.md  package.json
capacitor/capacitor-admob/: README.md  package.json  tsconfig.json
capacitor/capacitor-billing/: .gitignore  package.json  tsconfig.json
capacitor/capacitor-firebase/: HighduckCapacitorFirebase.podspec  package.json  tsconfig.json  tsconfig.project.json
capacitor/capacitor-play-games/: HighduckCapacitorPlayGames.podspec  package.json  tsconfig.json
engine/core/: README.md  package.json  tsconfig.json  tsconfig.project.json
engine/starter/: .npmignore  CHANGELOG.md  package.json  tsconfig.json  tsconfig.project.json
projects/test/: package.json  tsconfig.json
projects/test-xfl/: package.json  tsconfig.json
site/: capacitor.md  packages.md  profile-google-v8.md
std/anijson/: package.json  tsconfig.project.json
std/binpack/: jest.config.js  package.json  tsconfig.json
std/collision2d/: package.json  tsconfig.json  tsconfig.project.json
std/easing/: README.md  package.json
std/math/: package.json  tsconfig.json
std/poly2d/: package.json  tsconfig.project.json
std/types-canvaskit-wasm/: README.md  _index.d.ts  canvaskit.d.ts  index.d.ts  package.json  unsafe.d.ts
std/xfl/: README.md  package.json  tsconfig.json  tsconfig.project.json
std/zipfile/: README.md  package.json  tsconfig.json  tsconfig.project.json
test/: README.md  ilj.config.js  package.json  tsconfig.json
test-xfl/: .gitignore  README.md  package.json  tsconfig.json
test-xfl/assets/: bundle.json  test_0.fla
test-xfl/src/: index.ts
test/assets/: Comfortaa-Regular.asset.xml  bundle.json
test/src/: index.ts
tools/build-code/: README.md  package.json
tools/build-config/: README.md  jest.config.js  package.json  tsconfig.json  tsconfig.project.json
tools/cli/: README.md  ilj.js  package.json  tsconfig.base.json  tsconfig.commonjs.json  tsconfig.json
tools/dev-build-code/: package.json  tsconfig.project.json
tools/dev-cli/: README.md  ilj.js  package.json  tsconfig.json  tsconfig.project.json
tools/dev-content-processor/: package.json  tsconfig.json  tsconfig.project.json
tools/dev-export-app/: package.json  tsconfig.json  tsconfig.project.json
tools/dev-fs/: package.json
tools/dev-inspector/: package.json  tsconfig.json  tsconfig.project.json
tools/export-android/: README.md  export-android.js  tsconfig.json
tools/exporter/: .gitignore  CMakeLists.txt  README.md  build.sh  conanfile.txt  package.json
tools/exporter/src/: CMakeLists.txt  main.cpp
tools/exporter/src/ek/editor/: CMakeLists.txt
tools/exporter/src/ek/editor/assets/: editor_asset.cpp  editor_asset.hpp  editor_project.cpp  editor_project.hpp  flash_asset.cpp  flash_asset.hpp  freetype_asset.cpp  freetype_asset.hpp
tools/exporter/src/ek/editor/json/: serialize.cpp
tools/exporter/src/ek/flash/doc/: types.hpp
tools/exporter/src/ek/imaging/: CMakeLists.txt  decoder.cpp
tools/exporter/src/ek/math/: CMakeLists.txt
tools/exporter/src/ek/scenex/: CMakeLists.txt
tools/exporter/src/ek/scenex/2d/: font.hpp
tools/exporter/src/ek/scenex/data/: sg_data.hpp
tools/exporter/src/ek/spritepack/: export_atlas.cpp  export_atlas_json.cpp  save_image_png.cpp  sprite_data.hpp
tools/exporter/src/ek/util/: timer.hpp
tools/exporter/src/ek/xfl/: export_item.hpp  flash_doc_exporter.cpp
tools/fs-host/: index.js  package.json
tools/live-inspector/: package.json  tsconfig.base.json  tsconfig.json
tools/magicrepo/: README.md  package.json  tsconfig.project.json
(+379 files in other folders)
